middleware/k8s/default/template/chat.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: NodePort
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 32181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: $HUB/$REPOSITORY:$TAG
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 20
