middleware/k8s/default/template/chat-ingress.template.yaml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-service-ingress
  annotations:
    # Add ingress controller specific annotations here (e.g., rewrite rules, TLS)
spec:
  ingressClassName: nginx
  rules:
    - host: chat-ingress.progress.me
      http:
        paths:
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 3001
